--- a/client.in
+++ b/client.in
@@ -1,5 +1,16 @@
-X5B0TWjmeNtU3vd,REQUEST,0
-X5B0TWjmeNtU3vd,REQUEST,0
-QHmJh2xwErPDcmv,REQUEST,0
-111111111111111,REQUEST,0
-f80N46i82fdx61d,REQUEST,0
+74xaLqdTDdHZ9ey,REQUEST,0
+f80N46i82fdx61d,REQUEST,1
+f80N46i82fdx61d,READ,Applications
+f80N46i82fdx61d,EXECUTE,Applications
+f80N46i82fdx61d,DELETE,Applications
+74xaLqdTDdHZ9ey,READ,Preferences
+74xaLqdTDdHZ9ey,MODIFY,Preferences
+74xaLqdTDdHZ9ey,MODIFY,UserData
+74xaLqdTDdHZ9ey,REQUEST,0
+f80N46i82fdx61d,INSERT,Files
+f80N46i82fdx61d,INSERT,Applications
+f80N46i82fdx61d,REQUEST,1
+f80N46i82fdx61d,INSERT,Applications
+f80N46i82fdx61d,DELETE,Files
+f80N46i82fdx61d,EXECUTE,Applications
+f80N46i82fdx61d,DELETE,Applications
